--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   intl:
   path_provider: ^2.1.5
   url_launcher:
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
