--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,18 +35,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
-  firebase_core: ^4.1.0 
-  firebase_auth: ^6.0.2 
-  cloud_firestore: 
-  firebase_storage:
-  google_sign_in: ^7.1.1
-  image_picker:
-  random_string:
-  intl:
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.0
+  google_sign_in: ^6.2.1
+  image_picker: ^1.1.2
+  random_string: ^2.3.1
+  intl: ^0.19.0
   path_provider: ^2.1.5
-  url_launcher:
-  geolocator: ^14.0.2
-  geocoding: ^4.0.0
+  url_launcher: ^6.3.1
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
+
 
 
 dev_dependencies:
@@ -88,15 +89,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: Montserrat
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: font/
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
